# sdk.emulator-daemon

./: AUTHORS  CMakeLists.txt  LICENSE  LICENSE.APLv2  NOTICE  emuld.manifest  emuld.service  project.config
debian/: changelog  control  copyright  emuld.install.in  emuld.postinst.in  rules
include/: emuld.h  emuld_common.h  emuld_log.h  evdi.h  evdi_protocol.h  ijcmd.h  libemuld.h  mobile.h  msgproc.h  synbuf.h  tv.h  wearable.h
packaging/: emuld.changes  emuld.spec  emuld_wearable.manifest
src/: client.cpp  common.cpp  common_dev.cpp  device.cpp  emuld.c  emuld.cpp  emuld_proc.cpp  evdi.cpp  get_status.c  mobile.cpp  mobile_dev.cpp  msgproc_cmd.cpp  msgproc_hds.cpp  msgproc_location.cpp  msgproc_package.cpp  msgproc_suspend.cpp  msgproc_system.cpp  msgproc_vconf.cpp  net.cpp  tv.cpp  wearable.cpp  wearable_dev.cpp
src/libemuld/: CMakeLists.txt  evdi.cpp  libemuld.cpp  libemuld.pc.in  msgproc.cpp
wearable/: emuld
