CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libemuld CXX)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "${PREFIX}/bin")
SET(INCLUDEDIR "${PREFIX}/include/${PROJECT_NAME}")
SET(LIBDIR "${PREFIX}/lib")

SET(LIBEMULD_SRCS
    msgproc.cpp
    libemuld.cpp
    evdi.cpp
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

INCLUDE(FindPkgConfig)
pkg_check_modules(libpkgs REQUIRED
    vconf
    dlog)

FOREACH(flag ${libpkgs_CFLAGS})
    SET(EXTRA_LIB_CFLAGS "${EXTRA_LIB_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_LIB_CFLAGS}")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIBEMULD_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${libpkgs_LDFLAGS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME emuld)

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/libemuld.h
              ${CMAKE_SOURCE_DIR}/include/emuld_log.h
              ${CMAKE_SOURCE_DIR}/include/evdi.h
              ${CMAKE_SOURCE_DIR}/include/ijcmd.h
              ${CMAKE_SOURCE_DIR}/include/msgproc.h
        DESTINATION include/${PROJECT_NAME})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib COMPONENT RuntimeLibraries)
